Cat API endpoint, ugly, but working