@@ -2,19 +2,25 @@ package dev.vrba.simp.command.fun.animals;
 
 import dev.vrba.simp.command.Command;
 import dev.vrba.simp.command.CommandContext;
+import dev.vrba.simp.command.fun.animals.endpoints.CatApiEndpoint;
 import dev.vrba.simp.utilities.StatusEmbed;
 import discord4j.core.object.entity.channel.MessageChannel;
 import org.jetbrains.annotations.NotNull;
 import reactor.core.publisher.Mono;
+import reactor.netty.ByteBufFlux;
+import reactor.netty.http.client.HttpClient;
 
-import java.util.Collections;
+import java.io.InputStream;
+import java.time.Instant;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 public class AnimalsCommand implements Command {
 
-    private final Set<AnimalApiEndpoint> endpoints = Collections.emptySet();
+    private final Set<AnimalApiEndpoint> endpoints = Set.of(
+            new CatApiEndpoint()
+    );
 
     @Override
     public @NotNull String getName() {
@@ -27,20 +33,20 @@ public class AnimalsCommand implements Command {
 
         if (arguments.isEmpty()) {
             return StatusEmbed.sendError(
-                context.getChannel(),
-                "Missing the endpoint parameter"
+                    context.getChannel(),
+                    "Missing the endpoint parameter"
             );
         }
 
         if (arguments.size() > 3) {
             return StatusEmbed.sendError(
-                context.getChannel(),
-                """
-                Whoa, that's a lot of parameters.
-                            
-                Use either `pls gib <count> <endpoint>`
-                or `pls gib <endpoint>`
-                """
+                    context.getChannel(),
+                    """
+                            Whoa, that's a lot of parameters.
+                                        
+                            Use either `pls gib <count> <endpoint>`
+                            or `pls gib <endpoint>`
+                            """
             );
 
         }
@@ -55,8 +61,7 @@ public class AnimalsCommand implements Command {
                         arguments.get(1),
                         count
                 );
-            }
-            catch (NumberFormatException exception) {
+            } catch (NumberFormatException exception) {
                 return StatusEmbed.sendError(context.getChannel(), "Bruh, that's not even a valid number smh.");
             }
         }
@@ -76,29 +81,41 @@ public class AnimalsCommand implements Command {
         }
 
         return this.endpoints.stream()
-            .filter(api -> api.getNames().contains(endpoint))
-            .findFirst()
-            .map(api -> this.sendImage(channel, api))
-            .orElseGet(() -> StatusEmbed.sendError(
-                    channel,
-                    String.format(
-                        """
-                        I don't know this endpoint.
-                        Choose one of the following:
-                        %s
-                        """,
-                        this.endpoints.stream()
-                                .map(AnimalApiEndpoint::getNames)
-                                .map(names -> String.join(", ", names))
-                                .collect(Collectors.joining(", "))
-                    )
-            ));
+                .filter(api -> api.getNames().contains(endpoint))
+                .findFirst()
+                .map(api -> this.sendImage(channel, api))
+                .orElseGet(() -> StatusEmbed.sendError(
+                        channel,
+                        String.format(
+                                """
+                                        I don't know this endpoint.
+                                        Choose one of the following:
+                                        %s
+                                        """,
+                                this.endpoints.stream()
+                                        .map(AnimalApiEndpoint::getNames)
+                                        .map(names -> " • **" + String.join("**, **", names) + "**")
+                                        .collect(Collectors.joining("\n"))
+                        )
+                ));
     }
 
     private Mono<Void> sendImage(@NotNull Mono<MessageChannel> promise, @NotNull AnimalApiEndpoint endpoint) {
-        // TODO: Fetch image etc.
-        return promise
-                .flatMap(channel -> channel.createMessage(endpoint.getUrl()))
+        HttpClient client = HttpClient.create()
+                .baseUrl(endpoint.getUrl())
+                .headers(headers ->
+                    endpoint.getHeaders()
+                            .forEach(headers::add)
+                );
+
+        Mono<InputStream> content = client.get().responseContent().aggregate().asInputStream();
+
+        return promise.zipWith(endpoint.extractImageFromResponse(content))
+                .flatMap(tuple -> tuple.getT1().createEmbed(embed ->
+                    embed.setTitle(endpoint.getTitle())
+                        .setImage(tuple.getT2())
+                        .setTimestamp(Instant.now())
+                ))
                 .then();
     }
 }
